Created react project

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "- James\r - MacAloney",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Warning: No tests created yet.\"",
-    "start" : "node index.js"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type" : "git",
@@ -13,5 +15,32 @@
   },
   "keywords": ["devops", "nodejs", "express", "web"],
   "author": "James MacAloney - 101362896",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
